[package]
name = "replica_db"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = {version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono"]}
anyhow = "1.0.100"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
tracing = "0.1.43"
tokio = {version = "1.48.0", features = ["full"]}
rand = "0.8.5"
chrono = "0.4.42"
futures = "0.3.31"
tempfile = "3.23.0"
uuid = {version = "1.19.0", features = ["v4"]}
clap = { version = "4.5.53", features = ["derive"] }
indicatif = "0.18.3"
futures-util = "0.3.31"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
nalgebra = "0.34.1"
statrs = "0.18.0"
